classDiagram
    class Article {
        +int id
        +String titre
        +String contenu
        +Date date_de_publication
    }
    
    class Categorie {
        +int id
        +String nom
    }
    class Auteur {
        +int id
        +String nom
    }
    
    class Utilisateur {
        +int id
        +String nom
        +String email
        +String mot_de_passe
    }
    
    Categorie "1" -- "0..*" Article 
    Utilisateur "1" -- "0..*" Article 


